# deterministic-vmm

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  cpu.toml
.github/workflows/: mirror-toolchain.yml
guest/: .gitignore  init.c  kernel.config
src/: lapic.rs  main.rs  virtio_console.rs
tools/mkcpio/: Cargo.toml
tools/mkcpio/src/: main.rs
